# python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  .pypirc.template  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  tester_notebook.ipynb
.devcontainer/: Containerfile  devcontainer.json  initialize.sh
docs/obsidian/meta/: agent-guidelines.md
src/mimesbrunnr/: main.py
src/python_template/: __init__.py
