[project]
name = "python_template"
version = "1.1.0"
description = "Boilerplate project for Python Programing"
readme = "README.md"
authors = [
    {name = "Andreas Sandvik Hoeimyr", email = "ahoei01@proton.me"}
]
requires-python = ">=3.13"
dependencies = [
    "enums>=0.0.2",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "twine>=6.2.0",
]

[tool.ruff]
include = ["**/*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["python_template"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pythton_template --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/python_template"]
omit = ["tests/*"]

[tool.bumpversion]
current_version = "1.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: bump version to v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
