[project]
name = "python_template"
dynamic = ["version"]

description = "Boilerplate project for Python Programing"
readme = "README.md"
authors = [
    {name = "Andreas Sandvik Hoeimyr", email = "ahoei01@proton.me"}
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "twine>=6.2.0",
]

[tool.ruff]
include = ["**/*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["python_template"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pythton_template --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/python_template"]
omit = ["tests/*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/python_template/_version.py"
